# kambo-hive

./: Cargo.toml  README.md
host/: Cargo.toml
host/src/: main.rs
kambo-hive/: Cargo.toml  README.md
kambo-hive/src/common/: interfaces.rs
kambo-hive/src/host/: periodic_saver.rs  result_aggregator.rs
kambo-hive/src/utils/: mod.rs
src/: lib.rs
src/common/: interface.rs  interfaces.rs  messages.rs  mod.rs  result.rs  task.rs
src/host/: mod.rs  result_aggregator.rs  server.rs  task_manager.rs
src/utils/: mod.rs
src/worker/: client.rs
worker/: Cargo.toml  README.md
worker/src/: graph.rs  lib.rs  main.rs
