[workspace.package]
version = "0.1.0"
authors = ["Heric da Silva Cruz <hericsilvaho@gmail.com>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/hscHeric/kambo-hive"
homepage = "https://github.com/hscHeric/kambo-hive"
readme = "README.md"
keywords = ["distribuido", "genetico", "computacao"]

[workspace]
resolver = "3"
members = ["kambo-hive", "host", "worker"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.8.0", features = ["v4", "serde"] }
log = "0.4"
env_logger = "0.11"
rayon = "1.10.0"
rand = "0.9.1"
