[package]
name = "kambo-hive-host"
version = "0.1.0"
edition = "2024"


[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
rayon = { workspace = true }
rand = { workspace = true }
kambo-hive = { path = "../kambo-hive" }
