[package]
name = "kambo-hive"
version = "0.1.0"
edition = "2024"
authors = ["Heric da Silva Cruz <hericsilvaho@gmail.com>"]
repository = "https://github.com/hscHeric/kambo-hive"
license = "MIT"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
uuid = { workspace = true, features = ["v4", "serde"] }
log = { workspace = true }
env_logger = { workspace = true }
rayon = { workspace = true }
rand = { workspace = true }
